--- a/app/views/jams/index.html.erb
+++ b/app/views/jams/index.html.erb
@@ -7,4 +7,4 @@
 <% end %>
 </ul><br>
 
-<a href="/jams/new"><div class="navigation-elements">New jam</div></a>
+<a href="/jams/new"><div class="navigation-elements">NEW JAM</div></a>
