--- a/app/views/jams/new.html.erb
+++ b/app/views/jams/new.html.erb
@@ -6,7 +6,7 @@
 			<%= f.date_field :date, class: 'form-control input-correction', :placeholder => 'Date' %><br><br>
 			<%= f.time_select :time, class: 'form-control input-correction', :placeholder => 'Time' %><br><br>
 			<%= f.text_field :info, class: 'form-control input-correction', :placeholder => 'Info' %><br><br><br>
-			<%= f.submit 'Add jam', class: 'navigation-elements' %>
+			<%= f.submit 'ADD JAM', class: 'navigation-elements' %>
 		<% end %>
 	</div>
 </div>
