--- a/app/views/spots/new.html.erb
+++ b/app/views/spots/new.html.erb
@@ -2,10 +2,9 @@
 <%= form_for @spot do |f| %>
 	<%= f.text_field :level, :placeholder => 'Level', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :floor_quality, :placeholder => 'Floor quality', class: 'form-control input-correction' %><br><br>
-	<%= f.text_field :teachers, :placeholder => 'Teachers', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :photo, :placeholder => 'Photo', class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :latitude, :value => @latitude , :placeholder => 'Latitude', disabled: true, class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :longitude, :value => @longitude , :placeholder => 'Longitude', disabled: true, class: 'form-control input-correction' %><br><br>
 	<%= f.text_field :address, :value => @addressOk , :placeholder => 'Address', disabled: true, class: 'form-control input-correction' %><br><br><br>
-	<%= f.submit 'Add spot', class: 'navigation-elements' %>
+	<%= f.submit 'ADD SPOT', class: 'navigation-elements' %>
 <% end %>
