--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,13 +36,13 @@
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Upload your trick</h4>
+		        <h4 class="modal-title" id="myModalLabel">Share your trick</h4>
 		      </div>
 		      <div class="modal-body">
 		      	<input type="text" class="form-control input-correction" id="trick-video" placeholder="Awesome video"><br>
 			  </div>
 		      <div class="modal-footer footer-correction">
-		        <button type="button" class="btn btn-primary" data-action="upload-trick" data-skater-id="<%= session[:id] %>" data-dismiss="modal">UPLOAD</button>
+		        <button type="button" class="btn btn-primary" data-action="upload-trick" data-skater-id="<%= session[:id] %>" data-dismiss="modal">SHARE</button>
 		      </div>
 		    </div>
 		  </div>
@@ -53,13 +53,13 @@
 		    <div class="modal-content">
 		      <div class="modal-header">
 		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Upload your attempt</h4>
+		        <h4 class="modal-title" id="myModalLabel">Share your attempt</h4>
 		      </div>
 		      <div class="modal-body">
 		      	<input type="text" class="form-control input-correction" id="attempt-video" placeholder="Awesome video"><br>					
 			  </div>
 		      <div class="modal-footer footer-correction">
-		        <button type="button" class="btn btn-primary" data-action="upload-attempt" data-dismiss="modal">UPLOAD</button>
+		        <button type="button" class="btn btn-primary" data-action="upload-attempt" data-dismiss="modal">SHARE</button>
 		      </div>
 		    </div>
 		  </div>
