--- a/app/views/spots/show.html.erb
+++ b/app/views/spots/show.html.erb
@@ -3,17 +3,16 @@
 		<img class="spot-photo" src="<%= @spot.photo %>"><br><br>
 	</div>
 </div><br>
-<ul class="list-group" style="display:inline-block">
-  <li class="list-group-item">Address: <%= @spot.address %></li>
-  <li class="list-group-item">Skaters level: <%= @spot.level %></li>
-  <li class="list-group-item">Floor quality: <%= @spot.floor_quality %></li>
-  <li class="list-group-item">Teachers: <%= @spot.teachers %></li>
-</ul>
-<br>
+
+<span class="label label-default span-correction"><%= @spot.address %></span><br><br>
+<span class="label label-default span-correction">Level: <%= @spot.level %></span><br><br>
+<span class="label label-default span-correction">Floor quality: <%= @spot.floor_quality %></span><br><br>
+
+<div class="spot-tricks">
 <% @spot_tricks.each do |spot_trick| %>
-<div class="panel panel-default panel-correction">
+<div class="panel panel-default panel-correction trick">
 	<div class="panel-body">
-	<iframe class="tricks" src="<%= spot_trick.video %>/embed/simple" width="600" height="600" frameborder="0"></iframe><br>
+		<iframe class="tricks" src="<%= spot_trick.video %>/embed/simple" width="600" height="600" frameborder="0"></iframe>	
 	</div>
 	<div class="panel-footer">
 	<% if session[:id] %>
@@ -28,10 +27,8 @@
 
 		<% if @rated === false %>
 			<div class="hearts-container">
-			<% for i in 1..5 %>
-			
-			<img class="hearts" src="<%= asset_path('skateHeartBW.png') %>" data-spot-id="<%= spot_trick.spot_id %>" data-trick-id="<%= spot_trick.id %>" data-hearts="<%= i %>" data-selected="no">
-			
+			<% for i in 1..5 %>			
+				<img class="hearts" src="<%= asset_path('skateHeartBW.png') %>" data-spot-id="<%= spot_trick.spot_id %>" data-trick-id="<%= spot_trick.id %>" data-hearts="<%= i %>" data-selected="no">			
 			<% end %>
 			</div>
 		<% else %>
@@ -41,11 +38,19 @@
 		<span>You need to <a href="<%= login_path %>">login</a> in order to rate a trick</span>
 	<% end %>
 	</div>
-</div><br>
+</div>
+<div class="trick-info">
+	<span class="label label-info span-correction skater-trick glyphicon glyphicon-user"> <%= Skater.where(id: spot_trick.skater_id).first.name %></span><br>
+	<% if spot_trick.average_rating != nil %>
+		<span class="label label-danger span-correction trick-rating glyphicon glyphicon-heart"> <%= spot_trick.average_rating %></span>
+	<% end %>	
+</div>
+<div class="clear-floats"></div>
 <% end %>
+</div>
 <br>
 <% if session[:id] %>
-	<div data-toggle="modal" data-target="#myModal2" class="navigation-elements new-trick-button" data-spot-id="<%= @spot.id %>">New trick</div>
+	<div data-toggle="modal" data-target="#myModal2" class="navigation-elements new-trick-button" data-spot-id="<%= @spot.id %>">NEW TRICK</div>
 	<!--<a href="<%= new_skater_trick_path(session[:id]) %>?spot_id=<%= @spot.id %>"><div class="navigation-elements">New trick</div></a>-->
 <% else %>
 	<span>You need to <a href="<%= login_path %>">login</a> in order to add a trick</span>
