--- a/app/views/jams/show.html.erb
+++ b/app/views/jams/show.html.erb
@@ -3,7 +3,7 @@
   <li class="list-group-item"><a href="/spots/<%= @spot.id %>"><img class="spot-photo" src="<%= @spot.photo %>"></a></li>
   <li class="list-group-item"><span class="label label-default span-correction">Date: <%= @jam.date %></span></li>
   <li class="list-group-item"><span class="label label-default span-correction">Hour: <%= @jam.time %></span></li>
-  <li class="list-group-item"><span class="label label-default span-correction">I<%= @jam.info %></span></li>
+  <li class="list-group-item"><span class="label label-default span-correction"><%= @jam.info %></span></li>
 </ul>
 <br>
 
