Improving JavaScript code

--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -6,4 +6,4 @@
 <br>
 <button class="nearest-spot btn btn-primary">Nearest spot</button>
 <button class="random-spot btn btn-primary">Random spot</button>
-<button class="btn btn-primary add-spot-here">Add spot here</button>
+<button class="add-spot-here btn btn-primary">Add spot here</button>
