--- a/app/views/skaters/new.html.erb
+++ b/app/views/skaters/new.html.erb
@@ -1,7 +1,7 @@
 <!--<div class="panel panel-default">
 	<div class="panel-body">--><br>
 		<%= form_for @skater do |f| %>
-			<%= f.text_field :name, :placeholder => 'Nickname', class: 'form-control input-correction' %><br><br>
+			<%= f.text_field :name, :placeholder => 'Name', class: 'form-control input-correction' %><br><br>
 			<%= f.email_field :email, :placeholder => 'Email', class: 'form-control input-correction' %><br><br>
 			<%= f.password_field :password, :placeholder => 'Password', class: 'form-control input-correction' %><br><br><br>
 			<%= f.submit 'Sign up', class: 'navigation-elements' %>
