--- a/app/views/jams/show.html.erb
+++ b/app/views/jams/show.html.erb
@@ -1,9 +1,9 @@
 <h2><%= @jam.name %></h2><br>
 <ul class="list-group" style="display:inline-block">
   <li class="list-group-item"><a href="/spots/<%= @spot.id %>"><img class="spot-photo" src="<%= @spot.photo %>"></a></li>
-  <li class="list-group-item"><span class="label label-default span-correction">Date: <%= @jam.date %></span></li>
-  <li class="list-group-item"><span class="label label-default span-correction">Hour: <%= @jam.time %></span></li>
-  <li class="list-group-item"><span class="label label-default span-correction"><%= @jam.info %></span></li>
+  <li class="list-group-item"><span class="label label-default default-font-size">Date: <%= @jam.date %></span></li>
+  <li class="list-group-item"><span class="label label-default default-font-size">Hour: <%= @jam.time %></span></li>
+  <li class="list-group-item"><span class="label label-default default-font-size"><%= @jam.info %></span></li>
 </ul>
 <br>
 
