--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,35 +86,15 @@
 		    </div>
 		  </div>
 		</div>
-		<!-- Sign up modal
-		<div class="modal fade" id="myModal3" tabindex="-1" role="dialog">
-		  <div class="modal-dialog modal-lg" role="document">
-		    <div class="modal-content">
-		      <div class="modal-header">
-		        <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span></button>
-		        <h4 class="modal-title" id="myModalLabel">Sign in</h4>
-		      </div>
-		      <div class="modal-body">
-		      	<input type="text" class="form-control input-correction" id="sign-up-nickname" placeholder="Nickname"><br><br>
-		      	<input type="text" class="form-control input-correction" id="sign-up-email" placeholder="Email"><br><br>
-		      	<input type="text" class="form-control input-correction" id="sign-up-password" placeholder="Password"><br><br>					
-			  </div>
-		      <div class="modal-footer footer-correction">
-		        <button type="button" class="btn btn-primary" data-action="sign-up" data-dismiss="modal">SIGN IN</button>
-		      </div>
-		    </div>
-		  </div>
-		</div> -->
 		<header>
 			<div class="logo"><a href="/">(&nbsp;&nbsp;&nbsp;SKATE&nbsp;&nbsp;OR&nbsp;&nbsp;BYE&nbsp;&nbsp;&nbsp;)</a></div>
 			<div class="account-nav">
 				<% if current_skater %> 
-					<div class="account-actions"><span class="label label-info span-correction"><%= current_skater.email %></span></div> | 
-					<div class="account-actions"><%= link_to "Log out", logout_path, method: "delete" %></div>
+					<div class="display-inline-block"><span class="label label-info default-font-size"><%= current_skater.email %></span></div> | 
+					<div class="display-inline-block"><%= link_to "Log out", logout_path, method: "delete" %></div>
 				<% else %> 
-					<div class="account-actions"><%= link_to "Log in", login_path %></div> | 
-					<div class="account-actions"><%= link_to "Sign up", signup_path %></div>
-					<!-- <div class="account-actions" data-toggle="modal" data-target="#myModal3">Sign up</div> -->
+					<div class="display-inline-block"><%= link_to "Log in", login_path %></div> | 
+					<div class="display-inline-block"><%= link_to "Sign up", signup_path %></div>
 				<% end %>
 			</div>
 		</header><br>
@@ -125,8 +105,6 @@
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
   				CHALLENGE A FRIEND
 			</button>
-			<!--<div data-toggle="modal" data-target="#myModal2" class="navigation-elements">New trick</div></a>-->
-			<!--<a href="#" data-toggle="modal" data-target="#myModal2"><div class="navigation-elements">New trick</div></a>-->
 		</nav><br>
 		<%= yield %><br><br>
 		<footer>&copy; 2015 Skate or Bye | Crafted by a padawan skater</footer>
