--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,7 @@
   			  	</div>  			  	
 			  </div>
 		      <div class="modal-footer footer-correction">
-		        <button type="button" class="btn btn-primary" data-action="add-challenge" data-challenger-id="<%= session[:id] %>" data-dismiss="modal">CHALLENGE</button>
+		        <button type="button" class="btn btn-primary" data-dismiss="modal" data-action="add-challenge" data-challenger-id="<%= session[:id] %>" >CHALLENGE</button>
 		      </div>
 		    </div>
 		  </div>
