Fixing protocols stuff

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -108,7 +108,7 @@
 		</nav><br>
 		<%= yield %><br><br>
 		<footer>&copy; 2015 Skate or Bye | Crafted by a padawan skater</footer>
-		<script src="http://code.jquery.com/jquery-1.11.3.min.js"></script>
+		<script src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
 		<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 		<script src="https://maps.googleapis.com/maps/api/js?v=3.exp&signed_in=true&libraries=geometry"></script>
 		<%= javascript_include_tag 'application' %>
