Fixing database problems

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -101,7 +101,7 @@
 		<nav>
 			<a href="/spots"><div class="navigation-elements">SPOTS</div></a>
 			<a href="/jams"><div class="navigation-elements">JAMS</div></a>
-			<a href="/challenges"><div class="navigation-elements">CHALLENGES</div></a>
+			<a href="/challenges"><div class="navigation-elements">CHALLENGES <span class="badge">4</span></div></a>
 			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#myModal">
   				CHALLENGE A FRIEND
 			</button>
