--- a/app/views/spots/index.html.erb
+++ b/app/views/spots/index.html.erb
@@ -4,6 +4,6 @@
 	</div>
 </div>
 <br>
-<button class="nearest-spot btn btn-primary">Nearest spot</button>
-<button class="random-spot btn btn-primary">Random spot</button>
-<button class="add-spot-here btn btn-primary">Add spot here</button>
+<button class="add-spot-here btn btn-primary" data-toggle="modal" data-target="#myModal5">ADD SPOT HERE</button>
+<button class="nearest-spot btn btn-primary">NEAREST SPOT</button>
+<button class="random-spot btn btn-primary">RANDOM SPOT</button>
